fix(compat): make compat endopint more compatible with acrcloud
